agp/intel: Insert a write barrier before flushing the chipset

This is required if the backend performs no serialising of its own, such
as gen3+.

References: https://bugs.freedesktop.org/show_bug.cgi?id=21442
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>